Revert "Ensure that more-less divs do not wrap away from their heading in click-to-edit topics"
This reverts commit 202b145194fd56db968ae61eecd9a75052f45306.

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1188,10 +1188,6 @@ small.search_term {
 
 
 /* less / more */
-/* Ensure that more-less divs to not wrap away from their heading in click-to-edit topics */
-.more-less {
-    display: inline;
-}
 
 .more-less.clipped {
     max-height: 60px;
